added nft api for sgroups
