# pkg/api/sgroups/v1/services.pb.gw.go
@@ -556,6 +556,56 @@ func request_SGroupsHostsAPI_WatchSocketStatistics_0(ctx context.Context, marsha
 	return stream, metadata, nil
 }
 
+func request_SGroupsHostsAPI_ListNft_0(ctx context.Context, marshaler runtime.Marshaler, client SGroupsHostsAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq HostReq_Nft_List
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.ListNft(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_SGroupsHostsAPI_ListNft_0(ctx context.Context, marshaler runtime.Marshaler, server SGroupsHostsAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq HostReq_Nft_List
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.ListNft(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+func request_SGroupsHostsAPI_WatchNft_0(ctx context.Context, marshaler runtime.Marshaler, client SGroupsHostsAPIClient, req *http.Request, pathParams map[string]string) (SGroupsHostsAPI_WatchNftClient, runtime.ServerMetadata, error) {
+	var (
+		protoReq HostReq_Nft_Watch
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	stream, err := client.WatchNft(ctx, &protoReq)
+	if err != nil {
+		return nil, metadata, err
+	}
+	header, err := stream.Header()
+	if err != nil {
+		return nil, metadata, err
+	}
+	metadata.HeaderMD = header
+	return stream, metadata, nil
+}
+
 func request_SGroupsHostBindingAPI_Upsert_0(ctx context.Context, marshaler runtime.Marshaler, client SGroupsHostBindingAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq HostBindingReq_Upsert
@@ -1483,6 +1533,33 @@ func RegisterSGroupsHostsAPIHandlerServer(ctx context.Context, mux *runtime.Serv
 	})
 
 	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_WatchSocketStatistics_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
+		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+		return
+	})
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_ListNft_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/sgroups.v1.SGroupsHostsAPI/ListNft", runtime.WithHTTPPathPattern("/v1/hosts/nft/list"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_SGroupsHostsAPI_ListNft_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SGroupsHostsAPI_ListNft_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_WatchNft_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
 		_, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
@@ -2449,6 +2526,40 @@ func RegisterSGroupsHostsAPIHandlerClient(ctx context.Context, mux *runtime.Serv
 		}
 		forward_SGroupsHostsAPI_WatchSocketStatistics_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_ListNft_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/sgroups.v1.SGroupsHostsAPI/ListNft", runtime.WithHTTPPathPattern("/v1/hosts/nft/list"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SGroupsHostsAPI_ListNft_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SGroupsHostsAPI_ListNft_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_SGroupsHostsAPI_WatchNft_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/sgroups.v1.SGroupsHostsAPI/WatchNft", runtime.WithHTTPPathPattern("/v1/hosts/nft/watch"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_SGroupsHostsAPI_WatchNft_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_SGroupsHostsAPI_WatchNft_0(annotatedContext, mux, outboundMarshaler, w, req, func() (proto.Message, error) { return resp.Recv() }, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -2461,6 +2572,8 @@ var (
 	pattern_SGroupsHostsAPI_UpdMetaInfo_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "hosts", "upd-metainfo"}, ""))
 	pattern_SGroupsHostsAPI_ListSocketStatistics_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "ss", "list"}, ""))
 	pattern_SGroupsHostsAPI_WatchSocketStatistics_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "ss", "watch"}, ""))
+	pattern_SGroupsHostsAPI_ListNft_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "nft", "list"}, ""))
+	pattern_SGroupsHostsAPI_WatchNft_0              = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "hosts", "nft", "watch"}, ""))
 )
 
 var (
@@ -2472,6 +2585,8 @@ var (
 	forward_SGroupsHostsAPI_UpdMetaInfo_0           = runtime.ForwardResponseMessage
 	forward_SGroupsHostsAPI_ListSocketStatistics_0  = runtime.ForwardResponseMessage
 	forward_SGroupsHostsAPI_WatchSocketStatistics_0 = runtime.ForwardResponseStream
+	forward_SGroupsHostsAPI_ListNft_0               = runtime.ForwardResponseMessage
+	forward_SGroupsHostsAPI_WatchNft_0              = runtime.ForwardResponseStream
 )
 
 // RegisterSGroupsHostBindingAPIHandlerFromEndpoint is same as RegisterSGroupsHostBindingAPIHandler but
